--- a/notebooks/iLQR_kine_panda_pos.ipynb
+++ b/notebooks/iLQR_kine_panda_pos.ipynb
@@ -76,6 +76,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Finding the joint (and link) index "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 b'panda_joint1'\n",
+      "1 b'panda_joint2'\n",
+      "2 b'panda_joint3'\n",
+      "3 b'panda_joint4'\n",
+      "4 b'panda_joint5'\n",
+      "5 b'panda_joint6'\n",
+      "6 b'panda_joint7'\n",
+      "7 b'panda_hand_joint'\n",
+      "8 b'panda_finger_joint1'\n",
+      "9 b'panda_finger_joint2'\n",
+      "10 b'panda_grasptarget_hand'\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(p.getNumJoints(robot_id)):\n",
+    "    print(i, p.getJointInfo(robot_id, i)[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Construct the robot system"
    ]
   },
@@ -202,19 +237,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "#W and WT: cost coefficients for the end-effector reaching task\n",
-    "p_ref = np.array([0.5, -.4, 0.4])\n",
+    "p_ref = np.array([0.5, -.6, 0.3])\n",
     "W = np.eye(3)*1\n",
     "WT = np.eye(3)*100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
@@ -304,13 +339,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cost converges at iteration 4, cannot decrease further\n"
+      "Cost converges at iteration 5, cannot decrease further\n"
      ]
     }
    ],
    "source": [
     "n_iter = 30\n",
-    "ilqr_cost.solve(n_iter, method='batch')\n",
+    "ilqr_cost.solve(n_iter, method='recursive')\n",
     "xs_batch, us_batch = ilqr_cost.xs, ilqr_cost.us\n",
     "\n",
     "#clear_output()"
@@ -325,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,13 +399,6 @@
    "source": [
     "print(pos-p_ref)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -389,7 +417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
