Refining the object oriented examples and the overall notations

--- a/notebooks/iLQR_kine_panda_orn_object_oriented.ipynb
+++ b/notebooks/iLQR_kine_panda_orn_object_oriented.ipynb
@@ -114,18 +114,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Target orientation:  [0.7686 0.0416 0.3249 0.5495]\n"
-     ]
-    }
-   ],
    "source": [
     "qT = np.random.uniform(-1,1,7)\n",
     "qT[3] -= 1.5\n",
@@ -145,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -198,21 +188,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Set reference"
+    "#### Set reference coordinate frame"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#### Define the object target and rotation\n",
+    "#### Define the position and orientation of the coordinate frame\n",
     "p_ref = np.array([0.7, -.3, 0.3])\n",
-    "angle = 0.4\n",
-    "quat_obj = np.array([0,0,np.sin(angle/2), np.cos(angle/2)])\n",
-    "R_obj = quat2Mat(quat_obj)\n",
-    "p.resetBasePositionAndOrientation(ballId, p_ref, quat_obj)\n",
+    "angle = 0.3\n",
+    "quat_ref = np.array([0,0,np.sin(angle/2), np.cos(angle/2)])\n",
+    "R_ref = quat2Mat(quat_ref)\n",
+    "p.resetBasePositionAndOrientation(ballId, p_ref, quat_ref)\n",
     "\n",
     "#W and WT: cost coefficients for the end-effector reaching task\n",
     "W = np.eye(3)*1\n",
@@ -221,25 +211,24 @@
     "#Ignore the error at the idx-th axis in the object frame\n",
     "# idx = 0\n",
     "# W[idx] *= 0.0\n",
-    "# WT[idx] *= 0.0\n",
-    "\n",
-    "p.resetBasePositionAndOrientation(ballId, pos0, quat_obj)"
+    "# WT[idx] *= 0.0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Set the target orientation in the coordinate frame"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "target_orn = np.array([np.sin(np.pi/2), 0,0,np.cos(np.pi/2)])"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "target_orn = quat_obj"
+    "#Target: z coordinate of the end-effector facing downward in the reference coordinate frame\n",
+    "o_target = np.array([np.sin(np.pi/2), 0,0,np.cos(np.pi/2)])"
    ]
   },
   {
@@ -251,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,12 +326,12 @@
     "#Running cost is for the time 0 <= t < T, while terminal cost is for the time t = T\n",
     "runningStateCost = CostModelQuadratic(sys, Q)\n",
     "runningControlCost = CostModelQuadratic(sys, None, R)\n",
-    "runningEECost = CostModelQuadraticOrientation(sys,W, link_id, o_ref = target_orn, R_ref=R_obj)\n",
+    "runningEECost = CostModelQuadraticOrientation(sys,W, link_id, o_target, p_ref = p_ref, R_ref=R_ref)\n",
     "runningCost = CostModelSum(sys, [runningStateCost, runningControlCost, runningEECost])\n",
     "\n",
     "terminalStateCost = CostModelQuadratic(sys,Qf)\n",
     "terminalControlCost = CostModelQuadratic(sys, None,R)\n",
-    "terminalEECost = CostModelQuadraticOrientation(sys,WT, link_id,o_ref = target_orn, R_ref=R_obj)\n",
+    "terminalEECost = CostModelQuadraticOrientation(sys,WT, link_id, o_target, p_ref = p_ref, R_ref=R_ref)\n",
     "terminalCost = CostModelSum(sys, [terminalStateCost, terminalControlCost, terminalEECost])\n",
     "\n",
     "costs = [runningCost]*T + [terminalCost]"
@@ -357,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -416,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,16 +416,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Compute Error"
+    "### Move the object (reference frame) to the end-effector position, but keeping its reference orientation\n",
+    "\n",
+    "This is to check if the EE orientation is correct. If the robot reaches the correct orientation, it should be in a good orientation to grab the box."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pos, quat = sys.compute_ee(ilqr_cost.xs[-1], link_id)"
+    "pos, quat = sys.compute_ee(ilqr_cost.xs[-1], link_id)\n",
+    "p.resetBasePositionAndOrientation(ballId, pos, quat_ref)"
    ]
   },
   {
@@ -497,13 +489,6 @@
     "print(J_true)\n",
     "print(J-J_true)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
