--- a/notebooks/iLQR_kine_panda_pos_object_oriented.ipynb
+++ b/notebooks/iLQR_kine_panda_pos_object_oriented.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
     "\n",
     "#Create a ball to show the target\n",
     "#_,_,ballId = create_primitives(radius=0.05)\n",
-    "_,_,ballId = create_primitives(shapeType=p.GEOM_BOX, halfExtents=[0.3, 0.3, 0.05], rgbaColor=[1,0.4, 0,0.5])\n"
+    "_,_,ballId = create_primitives(shapeType=p.GEOM_BOX, halfExtents=[0.3, 0.1, 0.05], rgbaColor=[1,0.4, 0,0.5])\n"
    ]
   },
   {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,30 +233,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Set end effector reference "
+    "#### Set reference coordinate frame"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#### Define the object target and rotation\n",
+    "#### Define the position and orientation of the reference coordinate frame\n",
     "p_ref = np.array([0.7, -.3, 0.3])\n",
     "angle = 0.4\n",
-    "quat_obj = np.array([0,0,np.sin(angle/2), np.cos(angle/2)])\n",
-    "R_obj = quat2Mat(quat_obj)\n",
-    "p.resetBasePositionAndOrientation(ballId, p_ref, quat_obj)\n",
+    "quat_ref = np.array([0,0,np.sin(angle/2), np.cos(angle/2)])\n",
+    "R_ref = quat2Mat(quat_ref)\n",
+    "p.resetBasePositionAndOrientation(ballId, p_ref, quat_ref)\n",
     "\n",
     "#W and WT: cost coefficients for the end-effector reaching task\n",
     "W = np.eye(3)*1\n",
     "WT = np.eye(3)*100\n",
     "\n",
     "#Ignore the error at the idx-th axis in the object frame\n",
-    "idx = 0\n",
-    "W[idx] *= 0.0\n",
-    "WT[idx] *= 0.0"
+    "# idx = 0\n",
+    "# W[idx] *= 0.0\n",
+    "# WT[idx] *= 0.0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Set the target position (defined in the reference coordinate frame)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p_target = np.array([0.3,0.2,0.])"
    ]
   },
   {
@@ -275,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,12 +300,12 @@
     "\n",
     "runningStateCost = CostModelQuadratic(sys, Q)\n",
     "runningControlCost = CostModelQuadratic(sys, None, R)\n",
-    "runningEECost = CostModelQuadraticTranslation(sys,W, link_id,p_ref, R_ref = R_obj)\n",
+    "runningEECost = CostModelQuadraticTranslation(sys,W, link_id,p_target, p_ref = p_ref, R_ref = R_ref)\n",
     "runningCost = CostModelSum(sys, [runningStateCost, runningControlCost, runningEECost])\n",
     "\n",
     "terminalStateCost = CostModelQuadratic(sys,Qf)\n",
     "terminalControlCost = CostModelQuadratic(sys, None,R)\n",
-    "terminalEECost = CostModelQuadraticTranslation(sys,WT, link_id,p_ref, R_ref = R_obj)\n",
+    "terminalEECost = CostModelQuadraticTranslation(sys,WT, link_id,p_target, p_ref = p_ref, R_ref = R_ref)\n",
     "terminalCost = CostModelSum(sys, [terminalStateCost, terminalControlCost, terminalEECost])\n",
     "\n",
     "costs = [runningCost]*T + [terminalCost]"
@@ -304,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 80,
    "metadata": {
     "scrolled": true
    },
@@ -356,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,24 +388,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error in world coordinate frame:  [-0.2434 -0.1024  0.0004]\n",
-      "Error in object coordinate frame:  [-0.264   0.0005  0.0004]\n",
+      "Error in world coordinate frame:  [-0.0117 -0.      0.0015]\n",
+      "Error in object coordinate frame:  [-0.0107  0.0045  0.0015]\n",
       "Note that we ignore the error for the 0-th axis in the object frame\n"
      ]
     }
    ],
    "source": [
     "pos, quat = sys.compute_ee(ilqr_cost.xs[-1], link_id)\n",
-    "\n",
-    "print('Error in world coordinate frame: ', pos-p_ref)\n",
-    "print('Error in object coordinate frame: ', R_obj.T.dot(pos-p_ref))\n",
+    "error_world = pos-(R_ref.dot(p_target) + p_ref)\n",
+    "error_local = R_ref.T.dot(error_world)\n",
+    "print('Error in world coordinate frame: ', error_world) \n",
+    "print('Error in object coordinate frame: ', error_local)\n",
     "print('Note that we ignore the error for the {}-th axis in the object frame'.format(idx))"
    ]
   }
