--- a/notebooks/iLQR_kine.ipynb
+++ b/notebooks/iLQR_kine.ipynb
@@ -90,17 +90,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Set end effector reference "
+    "#### Set end effector target "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "#W and WT: cost coefficients for the end-effector reaching task\n",
-    "p_ref = np.array([.5, .8])\n",
+    "p_target = np.array([.5, .8])\n",
     "W = np.eye(2)*1\n",
     "WT = np.eye(2)*100\n",
     "sys.set_pref(p_ref)"
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,12 +131,12 @@
     "\n",
     "runningStateCost = CostModelQuadratic(sys, Q)\n",
     "runningControlCost = CostModelQuadratic(sys, None, R)\n",
-    "runningEECost = CostModelQuadraticTranslation(sys,W,ee_id,p_ref)\n",
+    "runningEECost = CostModelQuadraticTranslation(sys,W,ee_id,p_target)\n",
     "runningCost = CostModelSum(sys, [runningStateCost, runningControlCost, runningEECost])\n",
     "\n",
     "terminalStateCost = CostModelQuadratic(sys,Qf)\n",
     "terminalControlCost = CostModelQuadratic(sys, None,R)\n",
-    "terminalEECost = CostModelQuadraticTranslation(sys,WT,ee_id,p_ref)\n",
+    "terminalEECost = CostModelQuadraticTranslation(sys,WT,ee_id,p_target)\n",
     "terminalCost = CostModelSum(sys, [terminalStateCost, terminalControlCost, terminalEECost])\n",
     "\n",
     "costs = [runningCost]*T + [terminalCost]"
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
