--- a/notebooks/iLQR_kine_panda_pos.ipynb
+++ b/notebooks/iLQR_kine_panda_pos.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,28 +232,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Set end effector reference "
+    "#### Set end effector target "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "#W and WT: cost coefficients for the end-effector reaching task\n",
-    "p_ref = np.array([0.5, -.6, 0.3])\n",
+    "p_target = np.array([0.5, -.6, 0.3])\n",
     "W = np.eye(3)*1\n",
     "WT = np.eye(3)*100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "p.resetBasePositionAndOrientation(ballId, p_ref, (0,0,0,1))"
+    "p.resetBasePositionAndOrientation(ballId, p_target, (0,0,0,1))"
    ]
   },
   {
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,12 +281,12 @@
     "\n",
     "runningStateCost = CostModelQuadratic(sys, Q)\n",
     "runningControlCost = CostModelQuadratic(sys, None, R)\n",
-    "runningEECost = CostModelQuadraticTranslation(sys,W, link_id,p_ref)\n",
+    "runningEECost = CostModelQuadraticTranslation(sys,W, link_id,p_target)\n",
     "runningCost = CostModelSum(sys, [runningStateCost, runningControlCost, runningEECost])\n",
     "\n",
     "terminalStateCost = CostModelQuadratic(sys,Qf)\n",
     "terminalControlCost = CostModelQuadratic(sys, None,R)\n",
-    "terminalEECost = CostModelQuadraticTranslation(sys,WT, link_id,p_ref)\n",
+    "terminalEECost = CostModelQuadraticTranslation(sys,WT, link_id,p_target)\n",
     "terminalCost = CostModelSum(sys, [terminalStateCost, terminalControlCost, terminalEECost])\n",
     "\n",
     "costs = [runningCost]*T + [terminalCost]"
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,19 +385,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-0.0007  0.0007  0.0003]\n"
+      "[-0.002   0.0028  0.0008]\n"
      ]
     }
    ],
    "source": [
-    "print(pos-p_ref)"
+    "print(pos-p_target)"
    ]
   }
  ],
