--- a/notebooks/iLQR_kine_panda_pos.ipynb
+++ b/notebooks/iLQR_kine_panda_pos.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -38,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,24 +281,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "#The costs consist of: a) state regularization (Q), b) control regularization (R), and c) End-effector reaching task (W)\n",
     "#Running cost is for the time 0 <= t < T, while terminal cost is for the time t = T\n",
+    "costs = []\n",
     "\n",
-    "runningStateCost = CostModelQuadratic(sys, Q)\n",
-    "runningControlCost = CostModelQuadratic(sys, None, R)\n",
-    "runningEECost = CostModelQuadraticTranslation(sys,W, link_id,p_target)\n",
-    "runningCost = CostModelSum(sys, [runningStateCost, runningControlCost, runningEECost])\n",
-    "\n",
+    "for i in range(T):\n",
+    "    runningStateCost = CostModelQuadratic(sys, Q)\n",
+    "    runningControlCost = CostModelQuadratic(sys, None, R)\n",
+    "    runningEECost = CostModelQuadraticTranslation(sys,W, link_id,p_target)\n",
+    "    runningCost = CostModelSum(sys, [runningStateCost, runningControlCost, runningEECost])\n",
+    "    costs += [runningCost]\n",
+    "    \n",
     "terminalStateCost = CostModelQuadratic(sys,Qf)\n",
     "terminalControlCost = CostModelQuadratic(sys, None,R)\n",
     "terminalEECost = CostModelQuadraticTranslation(sys,WT, link_id,p_target)\n",
     "terminalCost = CostModelSum(sys, [terminalStateCost, terminalControlCost, terminalEECost])\n",
     "\n",
-    "costs = [runningCost]*T + [terminalCost]"
+    "costs += [terminalCost]"
    ]
   },
   {
@@ -301,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -360,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
