--- a/notebooks/lara_example/ilqr_pointmass_obstacle_3d_crocoddyl.ipynb
+++ b/notebooks/lara_example/ilqr_pointmass_obstacle_3d_crocoddyl.ipynb
@@ -173,11 +173,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Q = np.eye(sys.Dx)*0.01 #coefficient for running cost\n",
+    "Q = np.eye(sys.Dx)*1. #coefficient for running cost\n",
     "Qf = np.eye(sys.Dx)*10  #coefficient for terminal cost\n",
     "R = np.eye(sys.Du)*0.005  #control coefficient\n",
     "mu = 1e-6              #regularization coefficient"
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
     "large_num = 1e10\n",
     "bounds = np.array([[-1,-1,-1, -large_num, -large_num, -large_num],\n",
     "                   [1,1,1, large_num, large_num, large_num]])\n",
-    "w_bound = 100."
+    "w_bound = 0."
    ]
   },
   {
@@ -239,15 +239,17 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
+   "outputs": [],
    "source": [
     "p.removeBody(obs_id)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,10 +351,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "plot_traj(xs[:100], obj_id, dt=0.1)"
    ]
